{
  "version": 4,
  "terraform_version": "1.14.1",
  "serial": 9,
  "lineage": "184688e6-06c0-0e3b-ea19-d01e3f2476d4",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_tls",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:919952350503:security-group/sg-05bf8fb521858964c",
            "description": "Allow TLS inbound traffic and all outbound traffic",
            "egress": [],
            "id": "sg-05bf8fb521858964c",
            "ingress": [],
            "name": "allow_tls",
            "name_prefix": "",
            "owner_id": "919952350503",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-012dc8bae5f485351"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "919952350503",
            "id": "sg-05bf8fb521858964c",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "app_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:919952350503:security-group-rule/sgr-0c292192c2ad9167e",
            "cidr_ipv4": "10.20.30.40/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 8080,
            "id": "sgr-0c292192c2ad9167e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-05bf8fb521858964c",
            "security_group_rule_id": "sgr-0c292192c2ad9167e",
            "tags": null,
            "tags_all": {},
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "919952350503",
            "id": "sgr-0c292192c2ad9167e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ftp_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:919952350503:security-group-rule/sgr-039c82bac11af3489",
            "cidr_ipv4": "10.20.30.40/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 21,
            "id": "sgr-039c82bac11af3489",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-05bf8fb521858964c",
            "security_group_rule_id": "sgr-039c82bac11af3489",
            "tags": null,
            "tags_all": {},
            "to_port": 21
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "919952350503",
            "id": "sgr-039c82bac11af3489",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "ssh_port",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:919952350503:security-group-rule/sgr-032db214cf110b7ab",
            "cidr_ipv4": "10.20.30.40/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-032db214cf110b7ab",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-05bf8fb521858964c",
            "security_group_rule_id": "sgr-032db214cf110b7ab",
            "tags": null,
            "tags_all": {},
            "to_port": 22
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "919952350503",
            "id": "sgr-032db214cf110b7ab",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.allow_tls"
          ]
        }
      ]
    }
  ]
}